Fixed spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -82,7 +82,7 @@ ol.navbar a:hover{
 }
 
 .homecontent{
-	margin: -2% 8% 5% 8%;
+	margin: 0 auto;
 }
 
 .backcontent1{
